# docs/swagger.json
@@ -47,7 +47,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.CreateBundleRequest"
+                            "$ref": "#/definitions/models.CreateBundleRequest"
                         }
                     }
                 ],
@@ -55,7 +55,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.Bundle"
+                            "$ref": "#/definitions/models.Bundle"
                         }
                     }
                 }
@@ -63,15 +63,191 @@
         },
         "/admin/products": {
             "post": {
-                "responses": {}
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admin only",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Create a new product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "admin",
+                        "name": "Role",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Product",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/admin/products/{id}": {
             "put": {
-                "responses": {}
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admin only",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Update product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "admin",
+                        "name": "Role",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updated Product",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Product"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             },
             "delete": {
-                "responses": {}
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Admin only",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "Delete product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "admin",
+                        "name": "Role",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Product ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/admin/stock/reduce": {
@@ -157,7 +333,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.Bundle"
+                                "$ref": "#/definitions/models.Bundle"
                             }
                         }
                     }
@@ -166,7 +342,7 @@
         },
         "/api/products": {
             "get": {
-                "description": "Retrieve list of products",
+                "description": "Public endpoint",
                 "produces": [
                     "application/json"
                 ],
@@ -194,7 +370,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.Product"
+                                "$ref": "#/definitions/models.Product"
                             }
                         }
                     }
@@ -203,6 +379,7 @@
         },
         "/api/products/{id}": {
             "get": {
+                "description": "Public endpoint",
                 "produces": [
                     "application/json"
                 ],
@@ -223,7 +400,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.Product"
+                            "$ref": "#/definitions/models.Product"
                         }
                     },
                     "404": {
@@ -287,7 +464,7 @@
         }
     },
     "definitions": {
-        "github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.Bundle": {
+        "models.Bundle": {
             "type": "object",
             "properties": {
                 "id": {
@@ -302,12 +479,12 @@
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.BundleProduct"
+                        "$ref": "#/definitions/models.BundleProduct"
                     }
                 }
             }
         },
-        "github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.BundleProduct": {
+        "models.BundleProduct": {
             "type": "object",
             "properties": {
                 "product_id": {
@@ -318,7 +495,7 @@
                 }
             }
         },
-        "github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.CreateBundleRequest": {
+        "models.CreateBundleRequest": {
             "type": "object",
             "required": [
                 "id",
@@ -338,12 +515,12 @@
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.BundleProduct"
+                        "$ref": "#/definitions/models.BundleProduct"
                     }
                 }
             }
         },
-        "github_com_Sanuthiabey_CTSE-Product-and-Bundle-Service_internal_models.Product": {
+        "models.Product": {
             "type": "object",
             "properties": {
                 "category": {
